[project]
name = "shap-shapley-additive-explanations"
version = "0.1.0"
description = "Os valores SHAP explicam a saída de modelos de aprendizado de máquina usando uma abordagem teórica de jogos. Cada recurso recebe um valor de importância que representa sua contribuição para a saída do modelo."
authors = [
    {name = "EddyGiusepe",email = "eddychirinos.unac@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "llvmlite (>=0.39.0)",
    "numba (>=0.57.0)",
    "shap (>=0.46.0,<0.47.0)",
    "numpy (>=1.24,<2.2)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

